Add request dependency

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "node": ">=6.4.0"
   },
   "dependencies": {
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "request-promise-any": "^1.0.5"
   },
   "devDependencies": {
     "eslint": "^4.8.0",
