--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node wrapper for raiden RPC",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --timeout 60000"
   },
   "repository": "dylanseago/raiden-rpc",
   "author": "Dylan Seago (dylan.seago@gmail.com)",
@@ -14,12 +14,16 @@
   },
   "dependencies": {
     "request": "^2.83.0",
-    "request-promise-any": "^1.0.5"
+    "request-promise-any": "^1.0.5",
+    "ethereum-address": "0.0.4"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
     "eslint": "^4.8.0",
     "eslint-config-airbnb-base": "^12.0.2",
+    "eslint-plugin-chai-expect": "^1.1.1",
     "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-mocha": "^4.11.0",
     "mocha": "^4.0.1"
   }
 }
