--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --timeout 60000",
-    "jsdoc": "jsdoc2md index.js"
+    "docs": "jsdoc2md index.js > api.md"
   },
   "repository": "dylanseago/raiden-rpc",
   "author": "Dylan Seago (dylan.seago@gmail.com)",
@@ -15,7 +15,6 @@
   },
   "dependencies": {
     "ethereum-address": "0.0.4",
-    "jsdoc-to-markdown": "^3.0.0",
     "request": "^2.83.0",
     "request-promise-any": "^1.0.5"
   },
@@ -26,6 +25,7 @@
     "eslint-plugin-chai-expect": "^1.1.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-mocha": "^4.11.0",
+    "jsdoc-to-markdown": "^3.1.0-0",
     "mocha": "^4.0.1"
   }
 }
